# workrb-recsys-hr-challenge-2026

./: .gitignore  README.md  pyproject.toml
data/: get_started_example.json
knowledge_sharing/: README.md  get_started.ipynb  skill_extraction_references.md
knowledge_sharing/images/: make_baselines_diagrams.py  make_diagrams.py
participant/: README.md  _bootstrap.py  data.py  loss.py  my_model.py  sampler.py  test.py  train.py  validate.py
participant/examples/: classifier_head.py  cross_encoder.py  llm_reranker.py
src/workrb_challenge/: __init__.py
src/workrb_challenge/models/: __init__.py  base.py
src/workrb_challenge/training/: __init__.py  callbacks.py  config.py  loggers.py  overrides.py  train.py
submission/: README.md  _bm25_def.py  generate_submission_file.py
tests/: README.md  conftest.py  test_data.py  test_loss.py  test_model_contract.py  test_overrides.py  test_save_load.py
